[gd_scene load_steps=5 format=3 uid="uid://b7lw4cw31pi2t"]

[ext_resource type="Script" uid="uid://crd5h1wavvth0" path="res://scripts/skill_button.gd" id="1_n3pki"]
[ext_resource type="Resource" uid="uid://dd5pl3ncw5bc" path="res://data/skills/basic_skills/test_attack.tres" id="2_ka5vw"]
[ext_resource type="Texture2D" uid="uid://cu3ec2plbpn5s" path="res://assets/placeholders/skill_cd.png" id="2_xafvn"]
[ext_resource type="Texture2D" uid="uid://b6dgauhq35yqn" path="res://assets/placeholders/sword_icon.png" id="3_p80kq"]

[node name="SkillButton" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_n3pki")
skill = ExtResource("2_ka5vw")

[node name="IconButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_p80kq")
texture_pressed = ExtResource("3_p80kq")

[node name="Cooldown" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="CDProgress" type="TextureProgressBar" parent="Cooldown"]
modulate = Color(1, 0.58431375, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
max_value = 5.0
value = 3.0
fill_mode = 4
texture_progress = ExtResource("2_xafvn")

[node name="CDlabel" type="Label" parent="Cooldown"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -11.5
offset_right = 5.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "5"

[connection signal="pressed" from="IconButton" to="." method="_on_icon_button_pressed"]
